--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,74 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
-    <h1>Cart Page</h1>
-    <p>Die Shopping cart Seite ist in Bearbeitung...</p>
+    <h1>{{ 'LABELS.SHOPPING_CART' | translate }}</h1>
+    <!--
+      Papierkorb: <i class="fa fa-trash" aria-hidden="true"></i>
+      Drucker: <i class="fa fa-print" aria-hidden="true"></i>
+      Download: <i class="fa fa-download" aria-hidden="true"></i>
+      Plus: <i class="fa fa-plus-circle" aria-hidden="true"></i>
+    -->
+    <br/>
+    <table class="table table-striped table-responsive-sm">
+      <thead id="sum_row">
+        <tr>
+          <th scope="col">{{ 'LABELS.CART_QUANTITY' | translate }}</th>
+          <th scope="col">{{ 'LABELS.CART_PICTURE' | translate }}</th>
+          <th scope="col">
+            <i class="fa fa-lg fa-print" aria-hidden="true"></i>
+          </th>
+          <th scope="col">
+            <i class="fa fa-lg fa-download" aria-hidden="true"></i>
+          </th>
+          <th scope="col">{{ 'LABELS.CART_SIZE' | translate }}</th>
+          <th scope="col">{{ 'LABELS.CART_PRICE' | translate }}</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>
+            <div class="btn-group btn-group-sm" role="group" aria-label="First group">
+              <button type="button" class="btn btn-secondary" (click)="decreaseQuantity(quantityBox.value)">
+                <i class="fa fa-minus-circle"></i>
+              </button>
+              <input #quantityBox type="text">
+              <button type="button" class="btn btn-secondary">
+                <i class="fa fa-plus-circle"></i>
+              </button>
+            </div>
+          </th>
+          <td>THUMB-NAIL PICTURE_NAME</td>
+          <td>
+            <div class="form-group">
+              <input name="group1" type="radio" class="with-gap" id="radio1">
+              <label for="radio1"></label>
+            </div>
+          </td>
+          <td>
+            <div class="form-group">
+              <input name="group1" type="radio" class="with-gap" id="radio2">
+              <label for="radio2"></label>
+            </div>
+          </td>
+          <td>PICTURE_SIZE</td>
+          <td>PICTURE_PRICE</td>
+          <td>
+            <i class="fa fa-lg fa-trash" aria-hidden="true"></i>
+          </td>
+        </tr>
+        <tr class="table-primary">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>{{ 'LABELS.TOTAL' | translate }}</td>
+          <td>PRICE</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="row justify-content-end">
+      <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
+      <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
+    </div>
   </div>
-</div>
