--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,10 +1,12 @@
 <div class="row mt-5 pt-5">
   <div class="text-center" style="margin: auto">
     <div>
-      <img class="animated flipInY" src="https://knowlikeandignite-knowlikeandignit.netdna-ssl.com/wp-content/uploads/2016/11/404.png">
-      <a>
-        <div class="mask"></div>
-      </a>
+      <p class="four-size">
+        <strong>4</strong>
+        <img class="lessMargin" src="http://www.freeiconspng.com/uploads/showing-gallery-for-camera-lens-png-clipart-10.png" width="150px"
+          alt="O">
+        <strong>4</strong>
+      </p>
       <h1>{{ 'TEXTS.PAGE_NOT_FOUND' | translate }}</h1>
       <p class="section-description lead grey-text">{{ 'TEXTS.PAGE_NOT_FOUND_DESCRIPTION' | translate }}</p>
     </div>
