--- a/src/app/components/dashboard-event-card/dashboard-event-card.component.html
+++ b/src/app/components/dashboard-event-card/dashboard-event-card.component.html
@@ -1,4 +1,4 @@
-<div class="card card-cascade">
+<div class="card card-cascade" *ngIf="event">
 
   <!--Card image-->
   <div class="view gradient-card-header indigo">
