--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -203,9 +203,6 @@
                 <mdb-item>
                   <mdb-item-head>Contact Information</mdb-item-head>
                   <mdb-item-body>
-                    <form [formGroup]="printingHouseContactForm" (ngSubmit)="updatePrintingHouse()">
-
-                    </form>
                   </mdb-item-body>
                 </mdb-item>
                 <mdb-item>
@@ -308,6 +305,11 @@
             </mdb-item-body>
           </mdb-item>
           <mdb-item>
+            <mdb-item-head>{{ 'LABELS.ADDRESS' | translate }}</mdb-item-head>
+            <mdb-item-body>
+            </mdb-item-body>
+          </mdb-item>
+          <mdb-item>
             <mdb-item-head>{{ 'LABELS.PUBLIC_PROFILE' | translate }}</mdb-item-head>
             <mdb-item-body>
               <br>
@@ -316,6 +318,8 @@
                   <input type="text" class="form-control" formControlName="name">
                   <label class="active">{{ 'INPUTS.DISPLAY_NAME' | translate }}</label>
                 </div>
+                <h1>Adress</h1>
+                <hr>
                 <div class="md-form">
                   <textarea class="md-textarea" type="text" length="120" mdbCharCounter formControlName="about"></textarea>
                   <label class="active">{{ 'INPUTS.ABOUT_YOU' | translate }}</label>
